# scitex-notebook

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-notebook-quality-audit-on-ubuntu-latest.yml  test.yml
.scitex/dev/: config.yaml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: 01_basic.py
src/scitex_notebook/: __init__.py  __main__.py  _compile.py  _convert.py  _magic.py  _mcp_server.py  _parse.py  _verify.py  mcp_server.py
src/scitex_notebook/_cli/: __init__.py  _main.py  _skills.py
src/scitex_notebook/_mcp/: __init__.py  handlers.py  tool_schemas.py
src/scitex_notebook/_skills/scitex-notebook/: 01_installation.md  01_parse-and-convert.md  02_dag-compile.md  02_quick-start.md  03_python-api.md  03_verify.md  04_cli-reference.md  05_mcp-tools.md  11_parse-and-convert.md  12_dag-compile.md  13_verify.md  SKILL.md  compilation.md  conversion.md  dag-compile.md  parse-and-convert.md  parsing.md  verification.md  verify.md
src/scitex_notebook/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_notebook/_sphinx_html/.doctrees/: api.doctree  environment.pickle  index.doctree
src/scitex_notebook/_sphinx_html/_modules/: index.html
src/scitex_notebook/_sphinx_html/_modules/scitex_notebook/: _compile.html  _convert.html  _magic.html  _parse.html  _verify.html
tests/: conftest.py  test_compile.py
tests/develop/: test_audit.py
tests/examples/: test_01_basic.py
tests/integration/: test_cross_package_imports.py
tests/scitex_notebook/: test__compile.py  test__convert.py  test__magic.py  test__mcp_server.py  test__parse.py  test__verify.py
tests/scitex_notebook/_cli/: test__main.py
tests/scitex_notebook/_mcp/: test_handlers.py  test_tool_schemas.py
